# dbx-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: vscode_integration.md
examples/: claude_desktop_config.json  usage_example.md
samples/: hello_world_notebook.py
src/: __init__.py  __main__.py  main.py  mcp_server.py
src/cli/: __init__.py  base.py  clusters.py  dbfs.py  jobs.py  models.py  notebooks.py  sql.py  workspace.py
src/core/: config.py  utils.py
src/dbx_mcp_server/: __init__.py  databricks_client.py  main.py
tests/: test_cli_base.py  test_cluster_libraries.py  test_config.py  test_core_utils.py  test_databricks_client.py  test_error_handling.py  test_main.py  test_mcp_server.py
